--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "immutability-helper": "^2.8.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +22,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0"
+    "enzyme": "^3.2.0",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.2.0"
   }
 }
