--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "enzyme-adapter-react-16": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
