add demo redux app

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.1.1",
     "immutability-helper": "^2.8.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "redux": "^4.0.1",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
