--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,8 +26,6 @@
   ],
   "devDependencies": {
     "enzyme": "^3.2.0",
-    "react-redux": "^5.0.6",
-    "react-scripts": "1.1.4",
     "react-test-renderer": "^16.2.0"
   }
 }
