--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "enzyme-adapter-react-16": "^1.1.1",
     "immutability-helper": "^2.8.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,6 +26,6 @@
   ],
   "devDependencies": {
     "enzyme": "^3.2.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.6.1"
   }
 }
