--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "enzyme-adapter-react-16": "^1.1.1",
     "immutability-helper": "^2.8.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
     "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
